# fitness_tracker

./: .dockerignore  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
backend/: .coveragerc  Dockerfile  main.py  pyproject.toml  requests.http
backend/fitness/: main.py
backend/fitness/authentication/: configuration.py  exceptions.py
backend/fitness/authentication/domain/: auth_formatter.py  auth_service.py  authentication_repository.py  authentication_utils.py  entities.py  user_repository.py  value_objects.py
backend/fitness/authentication/infra/: in_memory_authentication_repository.py  in_memory_user_repository.py  jwt_auth_formatter.py  mongodb_authentication_repository.py  mongodb_user_repository.py
backend/fitness/authentication/presentation/: api.py  contracts.py  dependency.py
backend/fitness/authentication/tests/: test_authentication_service.py
backend/fitness/commons/: connection.py  dict_utils.py  exception_handler.py  exceptions.py  settings.py  singleton.py
backend/fitness/debug/presentation/: api.py
backend/fitness/entry/: configuration.py  exceptions.py
backend/fitness/entry/domain/: entity.py  entity_payload.py  entry_repository.py  entry_service.py  entry_type_enum.py  savable_payload.py
backend/fitness/entry/infra/: in_memory_entry_repository.py  mongo_db_entry_repository.py
backend/fitness/food/: configuration.py  exceptions.py
backend/fitness/notification/: configuration.py  exceptions.py
backend/fitness/report/: configuration.py
backend/fitness/user/: configuration.py
(+99 files in other folders)
